blog/index.css
/* ... */
#Text1:hover,
#PageList1:hover,
#LinkList1:hover,
#BlogArchive1:hover,
#HTML1:hover,
#SidebarBtn:hover,
#GoToTopBtn:hover,
#SearchBtn:hover,
#ShareBtn:hover,
#CloseBtn:hover {
  box-shadow: 1px 1px;
  transform: translate(2px, 2px);
}

#comments {
  padding: 0;
  background: none;
}

#Label1 ul {
  padding: 0 0 0 1em;
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}

#Label1 ul::-webkit-scrollbar {
  width: 0 !important
} /* Safari and Chrome */

.head-prefix {
	background-color: var(--secondary);
	border-radius: 5px;
	padding: 3px 5px;
	text-align: center;
	vertical-align: text-bottom;
}

.latest-post {
	box-shadow: 3px 3px var(--foreground);
	border: 1px solid var(--foreground);
	margin: 12px auto;
	border-radius: 8px;
	padding: 12px;
	overflow: hidden;
}

.latest-post .summary {
	color: var(--foreground);
}

.latest-post:hover .latest-post-title {
	color: var(--foreground);
	/* text-decoration: underline; */
}

.latest-post:active {
	box-shadow: 1px 1px;
	transform: translate(2px,2px);
}

.latest-post-statement {
    padding: 2px;
}

.latest-post:hover .latest-post-thumb {
	border-color: var(--foreground);	
}

.latest-post .outer {
    display: flex;
    gap: 10px;
}

.latest-post .outer img {
    object-fit: cover;
}

.latest-post .inner {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.latest-post .summary {
    max-height: 76px;
    overflow: hidden;
}

.anchors::-webkit-scrollbar {
  width: 0 !important
} /* Safari and Chrome */

.anchors {
    display: none;
    flex-wrap: wrap;
    align-content: flex-end;
    justify-content: center;
    align-items: center;
	position: absolute;
	background-color: var(--background);
	width: 150px;
    height: 140px;
	top: 2px;
    left: 2px;
    overflow-x: hidden;
    padding: 5px 0;
	gap: 5px;
	scrollbar-width: none; /* Firefox */
}

.latest-post:hover .anchors {
    display: flex;
}

.latest-post .anchors a {
    color: var(--foreground);
	font-size: 0.88em;
    white-space: nowrap;
}

.latest-post .anchors a:hover {
    color: var(--primary);
	text-decoration: underline;
}

.hidden,
.news-thumbnail {
	display: none;
}

/*Website Adjustments*/
/*By Tag*/
body {
  display: none;
  overflow-x: hidden;
}

blockquote {
	margin: 1em;
}

a {
  color: var(--primary);
}

a img,
table div[style|=background] {
    box-sizing: border-box;
	border: 2px solid var(--secondary);
}

a img:hover,
table div[style|=background]:hover {
    border-color: var(--primary);
}

a:hover {
  text-decoration: none;
}

/*By Class*/
.tr-caption-container {
    padding: 4px;
    margin-bottom: .5em;
}

.failed {
	display: none;
	border: 0;
}

.flip-arrow {
  transform: rotate(180deg);
}

.material-icons {
  font-size: 48px;
}

span.small-icons {
    font-size: 18px;
    padding-right: 2px;
    padding-top: 2px;
}

/* 
.custom-table th, .custom-table td {
	border: 1px solid var(--foreground);
	padding: 2px 4px;
}  

.custom-table {
	border-collapse: collapse;
}

.custom-table tr:hover > td {
	background-color: gray;
}

*/
.center-cells td {
	text-align: center;
}

.title > a:hover {
  color: var(--primary);
}

.date-header {
  text-transform: uppercase;
  transition: height 1s;
}

.post-title,
.post-header {
  margin: 0 !important;
}

.post-title a,
.post-title.entry-title {
  font: normal bold 22px 'Trebuchet MS', Trebuchet, sans-serif;
  background-color: var(--background);
}

.content-outer {
  padding-top: 0;
}

.content-cap-bottom.cap-bottom {
  height: 30px;
}

.footer-inner {
  padding: 10px 10px;
}

.main-inner {
  padding: 0;
}

.main-inner .column-center-inner {
  padding-top: 20px;
}

.post-body a {
	text-decoration: underline;
}

.widget .post-body ul {
  padding: 0 1.5em;
}

.quickedit,
.status-msg-wrap,
.post-count,
.display-none {
  display: none;
}

.separator {
  padding: 0 10px;
}

.HTML {
  border: none;
  padding: 0;
}

.BlogArchive ul li {
    padding-left: 0;
    text-indent: 0;
}

.BlogArchive ul ul li {
    padding-left: 0;
    text-align: right;
}

.toggle {
    font-size: medium;
}

.latest-post,
.column-left-outer,
.search-expander,
.bar-left,
.bar-right {
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

.search-expander {
	text-align: center;
	margin: 5px;
}

.search-expander i {
	font-size: 24px;
	vertical-align: bottom;
	cursor: pointer;
	padding-bottom: 1px;
	font-weight: bold;
}

.widget.LinkList li {
    white-space: nowrap;
    overflow-x: hidden;
}

.homepage-column-center-inner {
	margin-top: -15px;
}

.list-label-widget-content {
  font-size: 14px;
}

.main-inner .date-outer {
  margin-bottom: 0;
}

.tabs-inner .widget li a,
.footer-inner .widget li a {
  padding: 0;
}

.tabs-inner .widget li {
  padding: 12px 20px;
}

.tabs-inner .widget li span {
  line-height: initial;
  display: block;
}

.tabs-inner .widget li,
.footer-inner .widget li {
  box-shadow: 3px 3px var(--foreground);
  border: 1px solid var(--foreground);
  margin: 3px 12px 3px 0;
  border-radius: 8px;
}

.tabs-inner .widget li:hover,
.footer-inner .widget li:hover {
  box-shadow: 1px 1px;
  transform: translate(2px, 2px);
}

.mobile-desktop-link {
  display: none;
}

.mobile-index-title {
  width: initial;
}

#sidebar-left-1 > div {
  padding: 10px;
}

#sidebar-left-1 ul {
  list-style: none;
  padding: 0;
}

#PageList1 div ul li:first-child a {
  font: normal bold 14px Open Sans;
  color: var(--foreground);
}

#sidebar-left-1.sidebar.section {
  margin: 0 8px 0 15px;
}

#blog-pager.blog-pager {
	margin: 0;
	padding: 3px;
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

/*Search Bar*/
.header-inner .Header .descriptionwrapper {
  margin-bottom: 0;
}

.gsc-search-button {
  display: none;
}

.gsc-input {
  padding: 2px 6px;
  font: inherit;
  width: 200px;
}
/* ... */

